# MCPs-iTbrasil

sienge-mcp/: .env.example  .gitignore  README.md  pyproject.toml
sienge-mcp/skills/criar-medicoes-sienge/: SKILL.md
sienge-mcp/src/sienge_mcp/: __init__.py  auth_check.py  client.py  config.py  models.py  server.py
sienge-mcp/src/sienge_mcp/tools/: __init__.py  contratos.py  medicoes.py
sienge-mcp/tests/: test_contratos.py  test_medicoes.py
