[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "sienge-mcp"
version = "0.1.0"
description = "MCP Server FastMCP para integracoes Sienge."
readme = "README.md"
requires-python = ">=3.10"
authors = [
  { name = "MCP Building" }
]
dependencies = [
  "fastmcp>=2.0.0",
  "httpx>=0.27.0",
  "pydantic>=2.6.0",
  "python-dotenv>=1.0.0"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0"
]

[project.scripts]
sienge-mcp = "sienge_mcp.server:main"
sienge-mcp-auth-check = "sienge_mcp.auth_check:main"

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
